dazn layout bugfix

--- a/misc/dazn_theater.user.css
+++ b/misc/dazn_theater.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           DAZN Theater Mode
 @namespace      nerblo
-@version        1.2.1
+@version        1.2.2
 @author         nerblo
 @license        CC-BY-SA-4.0
 @description    DAZN Theater Mode
@@ -53,6 +53,7 @@
     }
     main[class^="main__player-main-"] {
         width: 100% !important;
+        max-width: 4000px !important;
     }
     aside[class^="main__player-aside-"] {
         margin: 0 !important;
